Fix username truncating.

--- a/src/components/ShareCard/_share-card.scss
+++ b/src/components/ShareCard/_share-card.scss
@@ -111,6 +111,7 @@
   }
 
   &__tooltip-wrapper {
-    display: inline;
+    // Override to allow long usernames to truncate.
+    display: inline !important;
   }
 }
